fix(theme): fixes list-style-image on dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,8 +128,7 @@ html[data-reduced-motion='true'] * {
 }
 
 ul {
-  /* TODO: on dark mode it should be white */
-  list-style-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2220%22%20height%3D%2220%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22currentColor%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cline%20x1%3D%225%22%20y1%3D%2212%22%20x2%3D%2219%22%20y2%3D%2212%22%3E%3C%2Fline%3E%3Cpolyline%20points%3D%2212%205%2019%2012%2012%2019%22%3E%3C%2Fpolyline%3E%3C%2Fsvg%3E');
+  list-style-image: var(--theme-list-style-image);
 }
 
 @media screen and (max-width: 500px) {
